# hotdeal-crawling-project

./: .gitignore  Dockerfile  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  readme.md
api/: database.py  main.py  model.py  utils.py
api/router/: hotdeal.py
api/static/: hotdeal.csv  hotdeal_fm.csv  hotdeal_fm_board.csv
backend/: Dockerfile  pyproject.toml  run.sh  run_spider
backend/api/: model.py
backend/api/router/: hotdeal.py
backend/app/: database.py  main.py  model.py
backend/app/router/: hotdeal.py
backend/hotdeal/: acra_hotdeal.csv  arca_hotdeal.csv  arca_hotdeal_board.csv  database.py  duckdb_test.py  qz_hotdeal.csv  qz_hotdeal_board.csv  utils_test.py
backend/hotdeal-scheduler/: scheduler.py
backend/hotdeal/hotdeal/: items.py  pipelines.py  run_spider.py  utils.py
backend/hotdeal/hotdeal/spiders/: hotdeal_arca_board_spider.py  hotdeal_arca_spider.py  hotdeal_fm_board_spider.py  hotdeal_fm_spider.py  hotdeal_qz_board_spider.py  hotdeal_qz_spider.py  hotdeal_ruli_board_spider.py  hotdeal_ruli_spider.py  test.py
frontend/: Dockerfile  db.json  hotdeal.json  index.html  package-lock.json  package.json
frontend/hotdeal/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: Api.js  test.js
frontend/src/assets/: Detail.css  Header.css  Home.css  HotDealItem.css  ItemDetail.css  List.css
frontend/src/components/: Detail.jsx  Header.jsx  (+5 more)
hotdeal/: hotdeal_board.csv  hotdeal_fm.csv  scrapy.cfg
hotdeal/hotdeal/: items.py  middlewares.py  pipelines.py  settings.py  utils.py
nginx/: nginx.conf
(+2 files in other folders)
